--- a/test/fixtures/form_input_textarea.html
+++ b/test/fixtures/form_input_textarea.html
@@ -1,1 +1,1 @@
-<form action="/users" method="post"><label for="name">Name</label><input name="name" type="text" value="rob"><label for="job">Job</label><textarea cols="20" rows="40" name="job">hexlet</textarea><input name="commit" type="submit" value="OK"></form>
+<form action="/users" method="post"><label for="name">Name</label><input name="name" type="text" value="rob"><label for="job">Job</label><textarea name="job" rows="50" cols="50">hexlet</textarea><input type="submit" value="OK"></form>
